footer alignment fix

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -132,7 +132,7 @@ button {
     position: absolute;
     top: -19%;
     right: 41%;
-    margin-top: -4%;
+    margin-top: -3%;
     outline: none;
 }
 
@@ -261,6 +261,7 @@ img {
         border: none;
         position: absolute;
         top: -32%;
+        margin-top: -3.5%;
     }
     .careers {
         display: inherit;
