--- a/src/app/pages/comingup/comingup.component.scss
+++ b/src/app/pages/comingup/comingup.component.scss
@@ -47,6 +47,7 @@ img {
 .row {
     width: 100%;
     padding-top: 6%;
+    margin: 0;
 }
 
 p {
